@@ -3,6 +3,9 @@
 	* src/z80/ralloc2.cc,
 	  src/z80/gen.c:
 	  Improve code generation for z80 comparisons.
+	* src/SDCClospre.cc,
+	  src/SDCClospre.hpp:
+	  Improve lospre debug output.
 
 2024-03-29 Philipp Klaus Krause <philipp@colecovision.eu>
 
